--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "vue": "^2.5.2",
+    "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
+    "chai": "^4.1.2",
+    "install": "^0.11.0",
+    "ipfs": "^0.28.2",
+    "ipfs-pubsub-room": "^1.2.1",
+    "npm": "^6.0.1",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "webassembly": "^0.11.0"
   },
   "devDependencies": {
-    "css-loader": "^0.28.1",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.7.2",
-    "vue-loader": "^12.0.3",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.5.0"
+    "css-loader": "^0.28.11",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.8.3",
+    "vue": "^2.5.16",
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^2.7.0"
   }
 }
