--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "install": "^0.11.0",
     "ipfs": "^0.28.2",
     "ipfs-pubsub-room": "^1.2.1",
+    "libp2p": "^0.20.4",
     "npm": "^6.0.1",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
