--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webassembly": "^0.11.0"
   },
   "devDependencies": {
+    "@types/node": "^10.1.2",
     "css-loader": "^0.28.11",
     "ts-loader": "^2.3.7",
     "typescript": "^2.8.3",
