--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
   "dependencies": {
     "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
     "chai": "^4.1.2",
-    "install": "^0.11.0",
     "ipfs": "^0.28.2",
     "ipfs-pubsub-room": "^1.2.1",
     "libp2p": "^0.20.4",
-    "npm": "^6.0.1",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1",
-    "webassembly": "^0.11.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^10.1.2",
