--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
+    "@types/orbit-db": "git+https://github.com/willemneal/types-orbit-db.git",
     "chai": "^4.1.2",
     "install": "^0.11.0",
     "ipfs": "^0.28.2",
     "ipfs-pubsub-room": "^1.2.1",
     "libp2p": "^0.20.4",
     "npm": "^6.0.1",
+    "orbit-db": "^0.19.8",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1",
-    "webassembly": "^0.11.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^10.1.2",
