--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/filesystem": "0.0.28",
-    "browserfs": "^2.0.0",
     "ipfs": "^0.29.3",
+    "ipfs-mfs": "^0.1.0",
     "ipfs-pubsub-room": "^1.3.0",
     "isomorphic-git": "^0.19.9",
     "libp2p": "^0.20.4",
-    "npm": "^6.1.0",
     "orbit-db": "^0.19.8",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.1.0",
@@ -32,8 +31,10 @@
     "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
     "@types/node": "~7.0",
     "@types/orbit-db": "git+https://github.com/willemneal/types-orbit-db.git",
+    "bs58": "^4.0.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.11",
+    "interface-datastore": "^0.4.2",
     "ts-loader": "^2.3.7",
     "typescript": "^2.9.2",
     "vue": "^2.5.16",
