--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   "dependencies": {
     "@types/filesystem": "0.0.28",
     "ipfs": "^0.29.3",
-    "ipfs-mfs": "^0.1.0",
+    "ipfs-mfs": "../../OSD/js-ipfs-mfs",
     "ipfs-pubsub-room": "^1.3.0",
     "isomorphic-git": "^0.19.9",
     "libp2p": "^0.20.4",
     "orbit-db": "^0.19.8",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.1.0",
-    "vue-router": "^3.0.1"
+    "vue-property-decorator": "^6.1.0"
   },
   "devDependencies": {
     "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
@@ -39,6 +38,7 @@
     "typescript": "^2.9.2",
     "vue": "^2.5.16",
     "vue-loader": "^12.2.2",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.7.0",
     "worker-loader": "^2.0.0"
