--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./built/",
         "sourceMap": true,
         "strict": true,
-        "module": "es2015",
+        "module": "esnext",
         "moduleResolution": "node",
         "target": "es6",
         "lib":["es6","dom","es2017"],
