--- a/package.json
+++ b/package.json
@@ -17,30 +17,43 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/filesystem": "0.0.28",
+    "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
+    "@types/node": "^7.0.67",
+    "@types/orbit-db": "git+https://github.com/willemneal/types-orbit-db.git",
+    "@zxing/library": "^0.6.0",
+    "file-loader": "~1.1.11",
     "ipfs": "^0.29.3",
-    "ipfs-mfs": "../../OSD/js-ipfs-mfs",
-    "ipfs-pubsub-room": "^1.3.0",
-    "isomorphic-git": "^0.19.9",
+    "ipfs-mfs": "git+https://github.com/OpenSourceDemocracy/js-ipfs-mfs.git",
+    "ipfs-pubsub-room": "^1.4.0",
     "libp2p": "^0.20.4",
     "orbit-db": "^0.19.8",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.1.0"
+    "orbit-db-keystore": "git+https://github.com/OpenSourceDemocracy/orbit-db-keystore.git",
+    "style-loader": "~0.21.0",
+    "v-treeview": "^0.2.1",
+    "vue-style-loader": "^4.1.1",
+    "vueify": "^9.4.1",
+    "vuetify": "^1.1.7"
   },
   "devDependencies": {
-    "@types/ipfs": "git+https://github.com/survirtual/types-ipfs.git",
-    "@types/node": "~7.0",
-    "@types/orbit-db": "git+https://github.com/willemneal/types-orbit-db.git",
     "bs58": "^4.0.1",
     "chai": "^4.1.2",
-    "css-loader": "^0.28.11",
+    "css-loader": "~0.28.11",
+    "html-webpack-plugin": "^2.29.0",
     "interface-datastore": "^0.4.2",
+    "ipfs-postmsg-proxy": "^3.0.0",
+    "serviceworkers-ware": "^0.3.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "~3.0.2",
     "ts-loader": "^2.3.7",
+    "ts-vue-loader": "^1.0.1",
     "typescript": "^2.9.2",
     "vue": "^2.5.16",
+    "vue-class-component": "^6.0.0",
     "vue-loader": "^12.2.2",
+    "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^2.7.0",
+    "webpack": "^2.5.0",
     "worker-loader": "^2.0.0"
   }
 }
