Adding way to signup and login

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./built/",
         "sourceMap": true,
-        "strict": true,
+        /* "strict": true, */
         "module": "esnext",
         "moduleResolution": "node",
         "target": "es6",
