--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/orbit-db": "git+https://github.com/willemneal/types-orbit-db.git",
     "@zxing/library": "^0.6.0",
     "file-loader": "~1.1.11",
+    "http-vue-loader": "^1.3.5",
     "ipfs": "^0.29.3",
     "ipfs-mfs": "git+https://github.com/OpenSourceDemocracy/js-ipfs-mfs.git",
     "ipfs-pubsub-room": "^1.4.0",
@@ -30,9 +31,13 @@
     "orbit-db-keystore": "git+https://github.com/OpenSourceDemocracy/orbit-db-keystore.git",
     "style-loader": "~0.21.0",
     "v-treeview": "^0.2.1",
+    "vue-compile-typescript": "0.0.1",
     "vue-style-loader": "^4.1.1",
     "vueify": "^9.4.1",
-    "vuetify": "^1.1.7"
+    "vuetify": "^1.1.7",
+    "vuex-class": "^0.3.1",
+    "vuex-router-sync": "^5.0.0",
+    "vuex-typex": "^3.0.1"
   },
   "devDependencies": {
     "bs58": "^4.0.1",
@@ -53,6 +58,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1",
     "webpack": "^2.5.0",
     "worker-loader": "^2.0.0"
   }
